--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "core-js": "^3.3.2",
     "fuzzy.js": "^0.1.0",
     "node-gyp": "^6.0.1",
+    "thenby": "^1.3.0",
     "vue": "^2.6.10",
     "vue-select": "^3.4.0"
   },
