--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fuzzy.js": "^0.1.0",
     "node-gyp": "^6.0.1",
     "thenby": "^1.3.0",
+    "uuid": "^3.3.3",
     "vue": "^2.6.10",
     "vue-select": "^3.4.0"
   },
