--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-gyp": "^6.0.1",
     "uuid": "^3.3.3",
     "vue": "^2.6.10",
+    "vue-recomputed": "0.0.1",
     "vue-select": "^3.4.0"
   },
   "devDependencies": {
