--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@quintet/vue-foo-table",
+  "name": "@quintet/vue-quintable",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint",
     "build-bundle": "vue-cli-service build --target lib ./src/index.js"
   },
-  "main": "./dist/vue-foo-table.common.js",
+  "main": "./dist/vue-quintable.common.js",
   "files": [
     "dist/*"
   ],
