--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.1.0",
+    "chance": "^1.1.6",
     "core-js": "^3.3.2",
     "fuzzy.js": "^0.1.0",
+    "moment-timezone": "^0.5.31",
     "node-gyp": "^6.0.1",
+    "prismjs": "^1.20.0",
     "uuid": "^3.4.0",
     "vue": "^2.6.10",
     "vue-recomputed": "0.0.1",
