--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quintet/vue-quintable",
-  "version": "0.1.0",
+  "version": "0.9.0",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -53,5 +53,6 @@
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.41.2"
   },
-  "license" : "See in LICENCE"
+  "license" : "See in LICENCE",
+  "homepage": "https://quintet.io/quintable/"
 }
