--- a/package.json
+++ b/package.json
@@ -42,18 +42,21 @@
     "babel-eslint": "^10.1.0",
     "bootstrap": "^4.6.0",
     "eslint": "^5.16.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^5.0.0",
     "mutationobserver-shim": "^0.3.7",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
+    "prettier": "2.3.1",
     "pretty-checkbox-vue": "^1.1.9",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-bootstrap-vue": "^0.5.0",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^4.46.0"
   },
-  "license": "See in LICENCE",
+  "license": "MIT",
   "homepage": "https://quintet.io/vuequintable-post/",
   "keywords": [
     "table",
