--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quintet/vue-quintable",
-  "version": "1.2.7",
+  "version": "2.0.0",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -20,8 +20,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^0.1.10",
+    "@popperjs/core": "^2.9.3",
     "axios": "^0.21.1",
-    "bootstrap-vue": "^2.21.2",
     "chance": "^1.1.7",
     "core-js": "^3.9.1",
     "fuzzy.js": "^0.1.0",
@@ -39,19 +39,17 @@
     "@vue/cli-plugin-eslint": "^4.5.12",
     "@vue/cli-service": "^4.5.12",
     "babel-eslint": "^10.1.0",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.1.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^5.0.0",
     "mutationobserver-shim": "^0.3.7",
     "node-sass": "^4.14.1",
-    "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
     "prettier": "2.3.1",
     "pretty-checkbox-vue": "^1.1.9",
     "sass-loader": "^8.0.2",
-    "vue-cli-plugin-bootstrap-vue": "^0.5.0",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^4.46.0"
   },
