--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quintet/vue-quintable",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -20,7 +20,6 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^0.1.10",
-    "@popperjs/core": "^2.9.3",
     "axios": "^0.21.1",
     "chance": "^1.1.7",
     "core-js": "^3.9.1",
@@ -29,12 +28,14 @@
     "node-gyp": "^6.1.0",
     "prismjs": "^1.23.0",
     "uuid": "^3.4.0",
+    "v-tooltip": "^2.1.3",
     "vue": "^2.6.12",
     "vue-drag-drop": "^1.1.4",
     "vue-select": "^3.11.2"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@popperjs/core": "^2.9.3",
     "@vue/cli-plugin-babel": "^4.5.12",
     "@vue/cli-plugin-eslint": "^4.5.12",
     "@vue/cli-service": "^4.5.12",
