--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@quintet/vue-quintable",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "build-bundle": "vue-cli-service build --target lib ./src/index.js"
+    "build-bundle": "node pack.js",
+    "lint": "vue-cli-service lint"
   },
   "main": "./dist/vue-quintable.common.js",
   "files": [
