--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^5.0.0",
     "mutationobserver-shim": "^0.3.7",
-    "node-sass": "^4.14.1",
     "portal-vue": "^2.1.7",
     "prettier": "2.3.1",
     "pretty-checkbox-vue": "^1.1.9",
+    "sass": "^1.49.9",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^4.46.0"
