--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fuzzy.js": "^0.1.0",
     "moment-timezone": "^0.5.35",
     "node-gyp": "^6.1.0",
+    "portal-vue": "2.1.7",
     "prismjs": "^1.23.0",
     "uuid": "^3.4.0",
     "v-tooltip": "^2.1.3",
@@ -43,7 +44,6 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^9.4.0",
     "mutationobserver-shim": "^0.3.7",
-    "portal-vue": "^2.1.7",
     "prettier": "2.3.1",
     "pretty-checkbox-vue": "^1.1.9",
     "sass": "^1.49.9",
