--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
     "bootstrap": "^5.3.6",
+    "moment-timezone": "^0.6.0",
     "prismjs": "^1.30.0",
     "sass-embedded": "^1.89.0",
     "typescript": "~5.8.3",
