--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fuzzy.js": "^0.1.0",
     "uuid": "^11.1.0",
     "vue": "^3.5.13",
+    "vue-draggable-plus": "^0.6.0",
     "vue-select": "^4.0.0-beta.6"
   },
   "devDependencies": {
