--- a/tsconfig/tsconfig.app.json
+++ b/tsconfig/tsconfig.app.json
@@ -11,5 +11,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": ["../src/**/*.ts", "../src/**/*.tsx", "../src/**/*.vue"]
 }
