fixed package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-quintable",
+  "name": "@sensetence/vue-quintable",
   "private": false,
   "version": "3.0.0",
   "type": "module",
