--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sensetence/vue-quintable",
   "private": false,
-  "version": "3.0.1",
+  "version": "3.0.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,6 +10,18 @@
     "build": "vue-tsc -b && vite build --config vite.build.config.ts",
     "prod": "node ./pack.js"
   },
+  "main": "./dist/vue-quintable.cjs.js",
+  "module": "./dist/vue-quintable.es.js",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/vue-quintable.es.js",
+      "require": "./dist/vue-quintable.cjs.js"
+    },
+    "./style.css": "./dist/vue-quintable.css"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
@@ -17,7 +29,8 @@
     "fuzzy.js": "^0.1.0",
     "uuid": "^11.1.0",
     "vue": "^3.5.13",
-    "vue-select": "^4.0.0-beta.6"
+    "vue-select": "^4.0.0-beta.6",
+    "floating-vue": "^5.2.2"
   },
   "devDependencies": {
     "@popperjs/core": "^2.11.8",
@@ -37,7 +50,6 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-vue": "^10.5.1",
-    "floating-vue": "^5.2.2",
     "lodash-es": "^4.17.21",
     "moment-timezone": "^0.6.0",
     "prettier": "^3.4.2",
